# rust-webrtc-client-server-example

./: LICENSE-MIT  README.md  setup.sh  watch.sh
client/: Cargo.toml  index.html
client/src/: app.rs  html.rs  main.rs  mode.rs  params.rs  receiver.rs  sender.rs  weak_callback.rs  webrtc_configuration.rs  webrtc_utils.rs  websocket_utils.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
server/: Cargo.toml
server/src/: app.rs  channel.rs  channel_message.rs  channel_receiver.rs  channel_sender.rs  channels.rs  main.rs  server.rs  socket.rs  socket_receiver.rs  socket_sender.rs  weak_callback.rs  webrtc_api.rs  webrtc_data_receiver.rs  webrtc_media_receiver.rs  webrtc_receiver.rs  webrtc_sender.rs  webrtc_utils.rs  websocket_receiver.rs  websocket_sender.rs
