[package]
name = "server"
version = "0.0.1"
edition = "2018"
authors = ["Andrey Zheleznov <zheland.net@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
bincode = "1.3"
bytes = "1.1"
clap = "3.0.0-beta.4"
env_logger = "0.9.0"
futures = "0.3.17"
interceptor = "0.1.0"
log = "0.4.14"
rtp = "=0.3.3" # 0.3.4 contains breaking changes
serde = "1.0"
tokio-tungstenite = "0.15.0"
webrtc = "0.0.13"
webrtc-util = "0.4.2"

[dependencies.tokio]
version = "1.11.0"
features = [
    "macros",
    "rt-multi-thread",
    "rt",
    "sync",
]

[dependencies.protocol]
path = "../protocol"
